--- a/tools/h5repack/Makefile.in
+++ b/tools/h5repack/Makefile.in
@@ -27,9 +27,9 @@ CPPFLAGS=-I. -I$(srcdir) -I$(top_builddir)/src -I$(top_srcdir)/src  \
 
 ## Test programs and scripts.
 ##
-TEST_PROGS=h5repacktst
+TEST_PROGS=h5repacktst 
 TEST_SCRIPTS=./h5repack.sh
-
+PRIV_PROGS=testh5repack_detect_szip
 
 ## These are our main targets: library and tools.
 ##
@@ -37,7 +37,7 @@ LIBHDF5=$(top_builddir)/src/libhdf5.la
 LIBTOOLS=../lib/libh5tools.la
 
 PUB_PROGS=h5repack
-PROGS=$(PUB_PROGS) $(TEST_PROGS) 
+PROGS=$(PUB_PROGS) $(TEST_PROGS) $(PRIV_PROGS)
 
 ## Source and object files for the library; do not install
 ##
@@ -53,9 +53,10 @@ DISTCLEAN=h5repack.sh
 ## Source and object files for programs...
 ##
 PROG_SRC=h5repack.c h5repack_copy.c h5repack_filters.c  h5repack_refs.c  h5repack_list.c h5repack_main.c h5repack_opttable.c h5repack_parse.c h5repack_verify.c testh5repack_attr.c testh5repack_dset.c   testh5repack_main.c testh5repack_make.c  testh5repack_util.c
-PROG_OBJ=$(PROG_SRC:.c=.lo)
 OBJS=h5repack.lo h5repack_filters.lo h5repack_copy.lo h5repack_refs.lo  h5repack_list.lo h5repack_main.lo h5repack_opttable.lo h5repack_parse.lo h5repack_verify.lo	
 TEST_OBJS=h5repack.lo h5repack_filters.lo  h5repack_copy.lo h5repack_refs.lo  h5repack_list.lo h5repack_opttable.lo h5repack_parse.lo h5repack_verify.lo testh5repack_attr.lo testh5repack_dset.lo  testh5repack_main.lo testh5repack_make.lo  testh5repack_util.lo
+DETECT_OBJS=testh5repack_detect_szip.lo
+PROG_OBJ=$(PROG_SRC:.c=.lo) $(DETECT_OBJS)
 
 PRIVATE_HDR=
 
@@ -78,6 +79,9 @@ h5repack: $(OBJS)
 
 h5repacktst: $(TEST_OBJS)
 	@$(LT_LINK_EXE) $(CFLAGS) -o $@ $(TEST_OBJS)  $(LIBTOOLS)  $(LIBHDF5) $(LDFLAGS) $(LIBS)
+
+testh5repack_detect_szip: $(DETECT_OBJS)
+	@$(LT_LINK_EXE) $(CFLAGS) -o $@ $(DETECT_OBJS)  $(LIBTOOLS)  $(LIBHDF5) $(LDFLAGS) $(LIBS)
 
 
 @CONCLUDE@
