--- a/branches/hdf5_1_6/test/Makefile.in
+++ b/branches/hdf5_1_6/test/Makefile.in
@@ -24,11 +24,11 @@ CPPFLAGS=-I. -I$(srcdir) -I../src -I$(top_srcdir)/src @CPPFLAGS@
 
 ## These are our main targets. They should be listed in the order to be
 ## executed, generally most specific tests to least specific tests.
-TEST_PROGS=testhdf5 lheap ohdr stab gheap hyperslab istore bittests dtypes      \
-           dsets cmpd_dset extend external links unlink big mtime fillval mount \
-           flush1 flush2 enum gass_write gass_read gass_append set_extent       \
-           srb_write srb_append srb_read ttsafe stream_test getname file_handle \
-           ntypes dangle filename reserved
+TEST_PROGS=testhdf5 lheap ohdr stab gheap cache hyperslab istore bittests    \
+    dtypes dsets cmpd_dset extend external links unlink big mtime fillval    \
+    mount flush1 flush2 enum gass_write gass_read gass_append set_extent     \
+    srb_write srb_append srb_read ttsafe stream_test getname file_handle     \
+    ntypes dangle filename reserved
 
 TIMINGS=testmeta
 
@@ -70,17 +70,17 @@ CLEAN=$(TIMINGS)
 ## other source lists are for the individual tests, the files of which may
 ## overlap with other tests.
 
-TEST_SRC=big.c bittests.c cmpd_dset.c dsets.c dtypes.c extend.c              \
-         external.c fillval.c flush1.c flush2.c gheap.c h5test.c hyperslab.c \
-         istore.c lheap.c links.c mount.c mtime.c ohdr.c stab.c tarray.c     \
-         tattr.c tconfig.c testhdf5.c testmeta.c tfile.c         \
-         tgenprop.c th5s.c theap.c titerate.c tmeta.c trefer.c trefstr.c     \
-         tselect.c ttime.c ttbbt.c ttst.c tvltypes.c tvlstr.c tmisc.c        \
-         unlink.c enum.c ttsafe.c ttsafe_dcreate.c ttsafe_error.c            \
-         ttsafe_cancel.c ttsafe_acreate.c gass_write.c gass_read.c           \
-         gass_append.c srb_read.c srb_write.c srb_append.c stream_test.c     \
-         set_extent.c getname.c file_handle.c ntypes.c dangle.c filename.c   \
-         reserved.c
+TEST_SRC=big.c bittests.c cache.c cmpd_dset.c dsets.c dtypes.c extend.c      \
+    external.c fillval.c flush1.c flush2.c gheap.c h5test.c hyperslab.c      \
+    istore.c lheap.c links.c mount.c mtime.c ohdr.c stab.c tarray.c          \
+    tattr.c tconfig.c testhdf5.c testmeta.c tfile.c                          \
+    tgenprop.c th5s.c theap.c titerate.c tmeta.c trefer.c trefstr.c          \
+    tselect.c ttime.c ttbbt.c ttst.c tvltypes.c tvlstr.c tmisc.c             \
+    unlink.c enum.c ttsafe.c ttsafe_dcreate.c ttsafe_error.c                 \
+    ttsafe_cancel.c ttsafe_acreate.c gass_write.c gass_read.c                \
+    gass_append.c srb_read.c srb_write.c srb_append.c stream_test.c          \
+    set_extent.c getname.c file_handle.c ntypes.c dangle.c filename.c        \
+    reserved.c
 
 TEST_OBJ=$(TEST_SRC:.c=.lo)
 
@@ -118,6 +118,9 @@ testhdf5: $(TESTHDF5_OBJ)
 
 lheap: lheap.lo
 	@$(LT_LINK_EXE) $(CFLAGS) -o $@ lheap.lo $(LIB) $(LIBHDF5) $(LDFLAGS) $(LIBS)
+
+cache: cache.lo
+	@$(LT_LINK_EXE) $(CFLAGS) -o $@ cache.lo $(LIB) $(LIBHDF5) $(LDFLAGS) $(LIBS)
 
 ohdr: ohdr.lo
 	@$(LT_LINK_EXE) $(CFLAGS) -o $@ ohdr.lo $(LIB) $(LIBHDF5) $(LDFLAGS) $(LIBS)
