--- a/trunk/test/Makefile.in
+++ b/trunk/test/Makefile.in
@@ -83,9 +83,9 @@ TEST_SRC=big.c bittests.c cache.c cmpd_dset.c dsets.c dtypes.c extend.c      \
     external.c fillval.c flush1.c flush2.c gheap.c h5test.c hyperslab.c      \
     istore.c lheap.c links.c mount.c mtime.c ohdr.c stab.c tarray.c          \
     tattr.c tconfig.c testhdf5.c testmeta.c tfile.c                          \
-    tgenprop.c th5s.c theap.c titerate.c tmeta.c trefer.c trefstr.c          \
-    tselect.c ttime.c ttbbt.c ttst.c tvltypes.c tvlstr.c tmisc.c tid.c       \
-    unlink.c enum.c ttsafe.c ttsafe_dcreate.c ttsafe_error.c                 \
+    tgenprop.c th5s.c theap.c tid.c titerate.c tmeta.c tmisc.c trefer.c      \
+    trefstr.c tselect.c tskiplist.c ttime.c ttbbt.c ttst.c tvltypes.c        \
+    tvlstr.c unlink.c enum.c ttsafe.c ttsafe_dcreate.c ttsafe_error.c        \
     ttsafe_cancel.c ttsafe_acreate.c gass_write.c gass_read.c                \
     gass_append.c srb_read.c srb_write.c srb_append.c stream_test.c          \
     set_extent.c getname.c file_handle.c ntypes.c dangle.c error_test.c      \
@@ -115,10 +115,9 @@ check test _test: $(PROGS)
 ## How to build the tests...  They all depend on the test and hdf5 libraries.
 $(PROGS): $(LIB) $(LIBHDF5)
 
-TESTHDF5_OBJ=testhdf5.lo tarray.lo tattr.lo tconfig.lo tfile.lo \
-    tgenprop.lo th5s.lo theap.lo titerate.lo tmeta.lo ttime.lo trefer.lo     \
-    trefstr.lo tselect.lo ttbbt.lo ttst.lo tvltypes.lo tvlstr.lo tmisc.lo    \
-    tid.lo
+TESTHDF5_OBJ=testhdf5.lo tarray.lo tattr.lo tconfig.lo tfile.lo tgenprop.lo \
+    th5s.lo theap.lo tid.lo titerate.lo tmeta.lo tmisc.lo trefer.lo trefstr.lo \
+    tselect.lo tskiplist.lo ttbbt.lo ttime.lo ttst.lo tvltypes.lo tvlstr.lo
 
 TTS_OBJ=ttsafe.lo ttsafe_dcreate.lo ttsafe_error.lo             \
     ttsafe_cancel.lo ttsafe_acreate.lo
