--- a/test/Makefile.in
+++ b/test/Makefile.in
@@ -74,8 +74,8 @@ TEST_SRC=big.c bittests.c cache.c cmpd_dset.c dsets.c dtypes.c extend.c      \
     external.c fillval.c flush1.c flush2.c gheap.c h5test.c hyperslab.c      \
     istore.c lheap.c links.c mount.c mtime.c ohdr.c stab.c tarray.c          \
     tattr.c tconfig.c testhdf5.c testmeta.c tfile.c                          \
-    tgenprop.c th5s.c theap.c titerate.c tmeta.c trefer.c trefstr.c          \
-    tselect.c ttime.c ttbbt.c ttst.c tvltypes.c tvlstr.c tmisc.c             \
+    tgenprop.c th5s.c theap.c titerate.c tmeta.c tmisc.c trefer.c trefstr.c  \
+    tselect.c tskiplist.c ttime.c ttbbt.c ttst.c tvltypes.c tvlstr.c         \
     unlink.c enum.c ttsafe.c ttsafe_dcreate.c ttsafe_error.c                 \
     ttsafe_cancel.c ttsafe_acreate.c gass_write.c gass_read.c                \
     gass_append.c srb_read.c srb_write.c srb_append.c stream_test.c          \
@@ -107,8 +107,9 @@ check test _test: $(TEST_PROGS)
 $(TEST_PROGS): $(LIB) $(LIBHDF5)
 
 TESTHDF5_OBJ=testhdf5.lo tarray.lo tattr.lo tconfig.lo tfile.lo  \
-    tgenprop.lo th5s.lo theap.lo titerate.lo tmeta.lo ttime.lo trefer.lo      \
-    trefstr.lo tselect.lo ttbbt.lo ttst.lo tvltypes.lo tvlstr.lo tmisc.lo
+    tgenprop.lo th5s.lo theap.lo titerate.lo tmeta.lo tmisc.lo                \
+    trefer.lo trefstr.lo tselect.lo tskiplist.lo ttbbt.lo ttime.lo ttst.lo    \
+    tvltypes.lo tvlstr.lo
 
 TTS_OBJ=ttsafe.lo ttsafe_dcreate.lo ttsafe_error.lo             \
     ttsafe_cancel.lo ttsafe_acreate.lo
