--- a/configure.in
+++ b/configure.in
@@ -2357,6 +2357,28 @@ if test -n "$CPPFLAGS"; then
   CPPFLAGS=$TEMP_CPPFLAGS
 fi
 
+
+dnl ----------------------------------------------------------------------
+dnl Check if they would like the High Level library  compiled
+dnl
+
+
+AC_SUBST(HL) HL=""
+AC_MSG_CHECKING([if high level library is enabled])
+AC_ARG_ENABLE([hl],
+     [AC_HELP_STRING([--enable-hl],
+                     [Do not compile the high level library [default=yes]])],
+     [HDF5_HL=$enableval],
+     [HDF5_HL=yes])
+
+if test "X$HDF5_HL" = "Xyes"; then
+ echo "yes"
+ HL="hl"
+else
+ echo "no"
+fi
+	
+
 dnl ----------------------------------------------------------------------
 dnl Build the Makefiles.  Almost every Makefile.in will begin with the line
 dnl `@COMMENCE@' and end with the line `@CONCLUDE@'.  These lines insert
@@ -2413,6 +2435,14 @@ if test "X$HAVE_PABLO" = "Xyes"; then
   fi
 fi
 
+# conditionally generate the high level makefiles
+# to do : fortran with hl
+if test "X$HDF5_HL" = "Xyes"; then
+ HL_FILES="hl/Makefile
+	   hl/src/Makefile
+           hl/test/Makefile"
+fi
+
 AC_CONFIG_FILES([src/libhdf5.settings
                  config/depend1
                  config/depend2
@@ -2457,7 +2487,8 @@ AC_CONFIG_FILES([src/libhdf5.settings
                  doc/html/cpplus/Makefile
                  doc/html/cpplus_RM/Makefile
                  doc/html/cpplus_RM/header_files/Makefile
-                 doc/html/fortran/Makefile])
+                 doc/html/fortran/Makefile
+		 $HL_FILES])
 
 AC_OUTPUT
 no_create=$saved_no_create
@@ -2650,3 +2681,8 @@ IF_ENABLED_DISABLED "$STREAM_VFD"
 
 PRINT_N "                   Threadsafety"
 IF_ENABLED_DISABLED "$THREADSAFE"
+
+PRINT_N "             High Level library"
+IF_ENABLED_DISABLED "$HDF5_HL"
+
+
